--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,29 +1,41 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="card mb-4">
+<div class="card mb-4">
 
-        <div class="card-header">
-            <h3 class="text-center"><img class="rounded-circle figure-img img-thumbnail" src="{{ prof.profile_img.url }}">
+    <div class="card-header">
+        <h3 class="text-center"><img class="rounded-circle figure-img img-thumbnail" src="{{ prof.profile_img.url }}">
 
-                <span class="card-title text-capitalize  ml-2 mr-1">{{ prof.user.first_name }} {{ prof.user.last_name }}
+            <span class="card-title text-capitalize  ml-2 mr-1">{{ prof.user.first_name }} {{ prof.user.last_name }}
                 </span>
 
-                {% if user == prof.user %}
-                    <a href="{% url 'profile-update' %}" class="btn btn-primary btn-sm mt-1 mb-1"> Update It </a>
-                {% endif %}
-            </h3>
-        </div>
-        <div class="card-body">
-            <h4 class="text-black-50">
+            {% if user == prof.user %}
+            <a href="{% url 'profile-update' %}" class="btn btn-primary btn-sm mt-1 mb-1"> Update It </a>
+            {% endif %}
+        </h3>
+    </div>
+    <div class="card-body">
+        <h4 class="text-black-50">
             <p class="card-title">Username : {{ prof.user.username }}</p>
             <p class="card-text">Email Id : {{ prof.user.email }}</p>
             <p class="card-text">Age : {{ prof.age }}</p>
             <p class="card-text">Gender : {{ prof.gender }}</p>
-            </h4>
-        </div>
-        <div class="card-footer text-muted">
 
-        </div>
+        </h4>
     </div>
+    <div class="card-footer text-muted">
+        {% if prof.facebook != None and prof.facebook != '' %}
+        <a href="{{ prof.facebook }}"> <i class="fab fa-facebook fa-2x mr-3"></i></a>
+        {% endif %}
+        {% if prof.linkedin != None and prof.linkedin != '' %}
+        <a href="{{ prof.linkedin }}"><i class="fab fa-linkedin-in fa-2x mr-3"> </i></a>
+        {% endif %}
+        {% if prof.insta != None and prof.insta != '' %}
+        <a href="{{ prof.insta }}"><i class="fab fa-instagram fa-2x mr-3"></i></a>
+        {% endif %}
+        {% if prof.twitter != None and prof.twitter != '' %}
+        <a href="{{ prof.twitter }}"><i class="fab fa-twitter fa-2x"></i></a>
+        {% endif %}
+    </div>
+</div>
 {% endblock %}
