--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -16,6 +16,7 @@
             {% endif %}
             <br/>
             <a href="{% url 'profile' post.author.id %}" class="btn btn-outline-primary btn-sm">My Profile</a>
+            <a href="{% url 'user-post' post.author.username %}" class="btn btn-primary btn-sm">My all post</a>
 
         </div>
         <div class="card-body">
