--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -8,12 +8,13 @@
 
                 <div class="article-metadata">
 
-                    <a class="mr-2" href="{% url 'user-post' post.author.username %}">{{ post.author.first_name }} {{ post.author.last_name }}</a>
+                    <a class="mr-2" href="{% url 'profile' post.author.id %}">{{ post.author.first_name }} {{ post.author.last_name }}</a>
                     <small class="text-muted">Posted on {{ post.date_posted|date:'F d, Y , P' }}</small>
                 </div>
                 <h2><a class="article-title" href="{% url 'blog-detail' post.id %}">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.content|truncatechars:100 }}</p>
                 <a href="{% url 'blog-detail' post.id %}" class="btn btn-primary btn-sm">Read More &rarr;</a>
+                <a href="{% url 'user-post' post.author.username %}" class="btn btn-primary btn-sm">My all post</a>
             </div>
         </article>
     {% endfor %}
