--- a/blog/templates/blog/user_post.html
+++ b/blog/templates/blog/user_post.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-    <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+    <h2 class="mb-3 text-center"><i class="far fa-clipboard mr-1"></i>Posts by {{ view.kwargs.username }}| <small class="text-primary"> Total Posts:{{ page_obj.paginator.count }}</small></h2>
     {% for post in posts %}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ post.author.profile.profile_img.url }}">
@@ -8,13 +8,13 @@
 
                 <div class="article-metadata">
 
-                    <a class="mr-2"
-                       href="{% url 'user-post' post.author.username %}">{{ post.author.first_name }} {{ post.author.last_name }}</a>
+                    <a class="mr-2" href="{% url 'profile' post.author.id %}">{{ post.author.first_name }} {{ post.author.last_name }}</a>
                     <small class="text-muted">Posted on {{ post.date_posted|date:'F d, Y , P' }}</small>
                 </div>
                 <h2><a class="article-title" href="{% url 'blog-detail' post.id %}">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.content|truncatechars:100 }}</p>
                 <a href="{% url 'blog-detail' post.id %}" class="btn btn-primary btn-sm">Read More &rarr;</a>
+                
             </div>
         </article>
     {% endfor %}
