--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,23 +1,47 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="content-section">
-        <form action="" method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <legend class="border-bottom mb-4">Register Your Self</legend>
-            </div>
-            <div class="form-group">
-                {{ form|crispy }}
-            </div>
-            <div class="form-group">
-                <button class="btn-outline-primary " type="submit">Sign Up</button>
-            </div>
-        </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Already have an account!! <a class="ml-2" href="{% url 'login' %}">Sign In</a>
-            </small>
+<div class="content-section">
+    <form action="" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <legend class="border-bottom mb-4">Register Your Self</legend>
         </div>
+        <div class="form-group">
+            <div class="form-row">
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.username|as_crispy_field }}
+                </div>
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.email|as_crispy_field }}
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.first_name|as_crispy_field }}
+                </div>
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.last_name|as_crispy_field }}
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.password1|as_crispy_field }}
+                </div>
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.password2|as_crispy_field }}
+                </div>
+            </div>
+
+        </div>
+        <div class="form-group">
+            <button class="btn-outline-primary " type="submit">Sign Up</button>
+        </div>
+    </form>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            Already have an account!! <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+        </small>
     </div>
+</div>
 {% endblock %}
