add category model, add categories, thumbnail, commnet count to the post model

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,3 +1,6 @@
 {% extends 'blog/base.html' %}
+{% load static %}
+
 {% block content %}
+<img  class="img-fluid" src="{% static 'blog/img/About.jpg' %}" alt="about">
 {% endblock %}
