--- a/blog/templates/blog/update_post.html
+++ b/blog/templates/blog/update_post.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
                 <legend class="border-bottom mb-4">Blog Post</legend>
