--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-        <form action="" method="post">
+        <form class="" action="" method="post">
             {% csrf_token %}
             <div class="form-group">
                 <legend class="border-bottom mb-4">Login Into</legend>
