--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,7 +5,7 @@
     <div class="card-header">
         <h3 class="text-center"><img class="rounded-circle figure-img img-thumbnail" src="{{ prof.profile_img.url }}">
 
-            <span class="card-title text-capitalize  ml-2 mr-1 ">{{ prof.user.first_name }} {{ prof.user.last_name }}
+            <span class="card-title text-capitalize  ml-2 mr-1 ">{{ prof.user.get_full_name }} 
             </span>
             <a href="{% url 'user-post' prof.user.username %}" class="btn btn-primary btn-sm">My all post</a>
 
