--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,174 +2,198 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+    <title>DreamBlog</title>
 
-        <title>DreamBlog</title>
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'blog/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'blog/css/main.css' %}" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b3e353bbf5.js"></script>
+    <link href="{% static 'tinymce/css/prism.css' %}" rel="stylesheet">
+    {{ form.media }}
+</head>
 
-        <!-- Bootstrap core CSS -->
-        <link href="{% static 'blog/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-        <link href="{% static 'blog/css/main.css' %}" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/b3e353bbf5.js"></script>
-        
-    <body>
-        <header class="site-header">
-            <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-                <div class="container">
-                    <a class="navbar-brand mr-4" href="{% url 'blog-home' %}"><i
-                            class="fas fa-file-signature mr-1"></i>Dream Blog</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
-                        aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarToggle">
-                        <div class="navbar-nav mr-auto">
-                            <a class="nav-item nav-link" href="{% url 'blog-home' %}"><i
-                                    class="fas fa-home mr-1"></i>Home</a>
-                            <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
-                        </div>
-                        <!-- Navbar Right Side -->
-                        <div class="navbar-nav">
-                            {% if user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{% url 'profile' user.id %}"><i
-                                    class="fas fa-user-check mr-1"></i>Welcome
-                                : {{ user.first_name }} {{ user.last_name }}</a>
-                            <a class="nav-item nav-link" href="{% url 'logout' %}"><i
-                                    class="fas fa-user-lock mr-1"></i>Logout</a>
-
-                            {% else %}
-                            <a class="nav-item nav-link" href="{% url 'login' %}"><i
-                                    class="fas fa-fingerprint mr-1"></i>Login</a>
-                            <a class="nav-item nav-link" href="{% url 'user-register' %}"><i
-                                    class="fas fa-plus mr-1"></i>Register</a>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-            </nav>
-        </header>
-        <main role="main" class="container">
-            <div class="row">
-                {% if user.is_authenticated %}
-                <div class="col-md-8">
-                    {% else %}
-                    <div class="col-md-12">
-                        {% endif %}
-                        {% if messages %}
-                        {% for msg in messages %}
-                        <div class="alert-{{ msg.tags }}">
-                            {{ msg }}
-                        </div>
-                        {% endfor %}
-                        {% endif %}
-                        {% block content %}{% endblock %}
-                    </div>
-                    {% if user.is_authenticated %}
-                    <div class="col-md-4">
-
-                        <h4 class="text-center "><i class="fas fa-user-alt mr-1"></i>My Info</h4>
-
-                        <div class="content-section bg-primary ">
-                            <h6 class=""><a class="mr-2 text-white " href="{% url 'profile' user.id %}">
-                                    <img class="rounded-circle account-img img-thumbnail"
-                                        src="{{ user.profile.profile_img.url }}">
-                                    {{ user.first_name }} {{ user.last_name }}</a></h6>
-
-                            <ul class="list-group">
-                                <a href="{% url 'blog-create' %}"
-                                    class="list-group-item list-group-item-light text-center"><i
-                                        class="fas fa-pencil-alt mr-1"></i>New Posts</a>
-                                <a href="{% url 'user-post' user.username %}"
-                                    class="list-group-item list-group-item-primary text-center"><i
-                                        class="far fa-clipboard mr-1"></i>My all Posts</a>
-                                <a href="{% url 'profile' user.id %}"
-                                    class="list-group-item list-group-item-light text-center">
-                                    <i class="far fa-address-card mr-1"></i>My Profile</a>
-                                <a href="{% url 'profile-update' %}"
-                                    class="list-group-item list-group-item-info text-center"><i
-                                        class="far fa-edit mr-1"></i>Update
-                                    Profile</a>
-                                <li class="list-group-item list-group-item-light text-center">
-                                    {% if user.profile.facebook != None and user.profile.facebook != '' %}
-                                    <a href="{{ user.profile.facebook }}" target="_blank"> <i
-                                            class="fab fa-facebook fa-2x mr-3"></i></a>
-                                    {% endif %}
-                                    {% if user.profile.linkedin != None and user.profile.linkedin != '' %}
-                                    <a href="{{ user.profile.linkedin }}" target="_blank"><i
-                                            class="fab fa-linkedin-in fa-2x mr-3"> </i></a>
-                                    {% endif %}
-                                    {% if user.profile.insta != None and user.profile.insta != '' %}
-                                    <a href="{{ user.profile.insta }}" target="_blank"><i
-                                            class="fab fa-instagram fa-2x mr-3"></i></a>
-                                    {% endif %}
-                                    {% if user.profile.twitter != None and user.profile.twitter != '' %}
-                                    <a href="{{ user.profile.twitter }}" target="_blank"><i
-                                            class="fab fa-twitter fa-2x"></i></a>
-                                    {% endif %}
-                                </li>
-
-                            </ul>
-                            </p>
-                        </div>
-
-                    </div>
-
-                    {% endif %}
-
-                </div>
-        </main>
-        <!-- Footer -->
-        <footer class="font-italic  bg-light pt-3 border-top">
-
-            <!-- Footer Elements -->
+<body>
+    <header class="site-header">
+        <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
             <div class="container">
+                <a class="navbar-brand mr-4" href="{% url 'blog-home' %}"><i
+                        class="fas fa-file-signature mr-1"></i>Dream Blog</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+                    aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggle">
+                    <div class="navbar-nav mr-auto">
+                        <a class="nav-item nav-link" href="{% url 'blog-home' %}"><i
+                                class="fas fa-home mr-1"></i>Home</a>
+                        <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
+                        
+                    </div>
 
-                <!-- Social buttons -->
-                <ul class="list-unstyled list-inline text-center">
-                    <li class="list-inline-item">
-                        <a href="https://www.facebook.com/janam.saraiya" target="_blank"
-                            class="btn-floating btn-fb mx-1">
-                            <i class="fab fa-facebook fa-2x"> </i>
-                        </a>
+                    <!-- Navbar Right Side -->
+                    <div class="navbar-nav">
+                        
+                        {% if user.is_authenticated %}
+                        <a class="nav-item nav-link" href="{% url 'profile' user.id %}"><i
+                                class="fas fa-user-check mr-1"></i>Welcome
+                            : {{ user.first_name }} {{ user.last_name }}</a>
+                        <a class="nav-item nav-link" href="{% url 'logout' %}"><i
+                                class="fas fa-user-lock mr-1"></i>Logout</a>
+
+                        {% else %}
+                        <a class="nav-item nav-link" href="{% url 'login' %}"><i
+                                class="fas fa-fingerprint mr-1"></i>Login</a>
+                        <a class="nav-item nav-link" href="{% url 'user-register' %}"><i
+                                class="fas fa-plus mr-1"></i>Register</a>
+                        {% endif %}
+                        
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main role="main" class="container">
+        <div class="row">
+            <div class="col-md-8">
+                {% if messages %}
+                {% for msg in messages %}
+                <div class="alert-{{ msg.tags }}">
+                    {{ msg }}
+                </div>
+                {% endfor %}
+                {% endif %}
+                {% block content %}{% endblock %}
+            </div>
+
+            <div class="col-md-4">
+                    <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                <!--sidebar for login user-->
+                {% if user.is_authenticated %}
+                <h4 class="text-center "><i class="fas fa-user-alt mr-1 mt-2"></i>My Info</h4>
+
+                <div class="content-section bg-primary ">
+                    <h6 class=""><a class="mr-2 text-white " href="{% url 'profile' user.id %}">
+                            <img class="rounded-circle account-img img-thumbnail"
+                                src="{{ user.profile.profile_img.url }}">
+                            {{ user.first_name }} {{ user.last_name }}</a></h6>
+
+                    <ul class="list-group">
+                        <a href="{% url 'blog-create' %}" class="list-group-item list-group-item-light text-center"><i
+                                class="fas fa-pencil-alt mr-1"></i>New Posts</a>
+                        <a href="{% url 'user-post' user.username %}"
+                            class="list-group-item list-group-item-primary text-center"><i
+                                class="far fa-clipboard mr-1"></i>My all Posts</a>
+                        <a href="{% url 'profile' user.id %}" class="list-group-item list-group-item-light text-center">
+                            <i class="far fa-address-card mr-1"></i>My Profile</a>
+                        <a href="{% url 'profile-update' %}" class="list-group-item list-group-item-info text-center"><i
+                                class="far fa-edit mr-1"></i>Update
+                            Profile</a>
+                        <li class="list-group-item list-group-item-light text-center">
+                            {% if user.profile.facebook != None and user.profile.facebook != '' %}
+                            <a href="{{ user.profile.facebook }}" target="_blank"> <i
+                                    class="fab fa-facebook fa-2x mr-3"></i></a>
+                            {% endif %}
+                            {% if user.profile.linkedin != None and user.profile.linkedin != '' %}
+                            <a href="{{ user.profile.linkedin }}" target="_blank"><i
+                                    class="fab fa-linkedin-in fa-2x mr-3"> </i></a>
+                            {% endif %}
+                            {% if user.profile.insta != None and user.profile.insta != '' %}
+                            <a href="{{ user.profile.insta }}" target="_blank"><i
+                                    class="fab fa-instagram fa-2x mr-3"></i></a>
+                            {% endif %}
+                            {% if user.profile.twitter != None and user.profile.twitter != '' %}
+                            <a href="{{ user.profile.twitter }}" target="_blank"><i
+                                    class="fab fa-twitter fa-2x"></i></a>
+                            {% endif %}
+                        </li>
+
+                    </ul>
+                    </p>
+                </div>
+                {% endif %}
+                <!-- End sidebar for login user-->
+                <!--sidebar for category-->
+
+                <ul class="list-group mt-2 mb-2">
+                    <li class="list-group-item text-center">
+                        <h4><i class="far fa-list-alt"></i> Categories</h4>
                     </li>
-                    <li class="list-inline-item">
-                        <a class="btn-floating btn-tw mx-1">
-                            <i class="fab fa-twitter fa-2x"> </i>
-                        </a>
+                    {% for catagory in all_catagories %}
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <a href="{% url 'cat-list-post' catagory.id %}">
+                            {{ catagory }} </a>
+                        <span class="badge badge-success badge-pill">{{ catagory.post_set.all.count }}</span>
                     </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.instagram.com/janamsaraiya/" target="_blank"
-                            class="btn-floating btn-gplus mx-1">
-                            <i class="fab fa-instagram fa-2x"> </i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.linkedin.com/in/janamsaraiya/" target="_blank"
-                            class="btn-floating btn-li mx-1">
-                            <i class="fab fa-linkedin-in fa-2x"> </i>
-                        </a>
-                    </li>
+                    {% endfor %}
                 </ul>
-                <!-- Social buttons -->
+                <!--End sidebar for category-->
 
             </div>
-            <!-- Footer Elements -->
 
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">© 2019 Copyright:
-                <a>Janam Saraiya</a>
-            </div>
-            <!-- Copyright -->
 
-        </footer>
-        <!-- Footer -->
-        <!-- Bootstrap core JavaScript -->
-        <script src="{% static 'blog/jquery/jquery.min.js' %}"></script>
-        <script src="{% static 'blog/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    </body>
+
+
+        </div>
+
+        </div>
+    </main>
+    <!-- Footer -->
+    <footer class="font-italic  bg-light pt-3 border-top">
+
+        <!-- Footer Elements -->
+        <div class="container">
+
+            <!-- Social buttons -->
+            <ul class="list-unstyled list-inline text-center">
+                <li class="list-inline-item">
+                    <a href="https://www.facebook.com/janam.saraiya" target="_blank" class="btn-floating btn-fb mx-1">
+                        <i class="fab fa-facebook fa-2x"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-tw mx-1">
+                        <i class="fab fa-twitter fa-2x"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://www.instagram.com/janamsaraiya/" target="_blank"
+                        class="btn-floating btn-gplus mx-1">
+                        <i class="fab fa-instagram fa-2x"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://www.linkedin.com/in/janamsaraiya/" target="_blank"
+                        class="btn-floating btn-li mx-1">
+                        <i class="fab fa-linkedin-in fa-2x"> </i>
+                    </a>
+                </li>
+            </ul>
+            <!-- Social buttons -->
+
+        </div>
+        <!-- Footer Elements -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a>Janam Saraiya</a>
+        </div>
+        <!-- Copyright -->
+
+    </footer>
+    <!-- Footer -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="{% static 'blog/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'blog/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'tinymce/js/prism.js' %}"></script>
+</body>
 
 </html>
