--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -72,8 +72,8 @@
             </div>
 
             <div class="col-md-4">
-                    <form class="form-inline my-2 my-lg-0">
-                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <form action='{% url 'search-post' %}' class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search" name='q' aria-label="Search">
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                         </form>
                 <!--sidebar for login user-->
